# cgt-optimizer

./: .gitignore  Makefile  README.md  app.py  config.py  database.py  fees.py  fx.py  main.py  models.py  parser.py  portfolio.py  pricing.py  pyproject.toml  requirements.txt  sample_trades.csv  seed_db.py  tax.py  test_app.py  test_playwright.py  yahoo.py
templates/: index.html
