[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgt-reality-engine"
version = "0.1.0"
description = "Minimal Flask app for EUR reality of USD broker trades with Irish CGT and FX impact."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "Flask>=2.3.0,<3.0.0",
    "requests>=2.31.0"
]

[project.urls]
homepage = "https://example.com"
repository = "https://example.com"

[tool.setuptools]
py-modules = ["app", "parser", "fx", "tax", "yahoo"]
